# obs-bible-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.bkit/snapshots/: snapshot-2026-04-22T03-44-10-020Z.json  snapshot-2026-04-22T03-44-30-839Z.json  snapshot-2026-04-22T03-44-36-833Z.json
.bkit/state/: memory.json  pdca-status.json
.gemini/policies/: bkit-starter-policy.toml
data/locale/: en-US.ini
docs/superpowers/plans/: 2026-04-22-bible-obs-plugin.md
docs/superpowers/specs/: 2026-04-22-bible-obs-plugin-design.md
src/: BiblePluginManager.cpp  BiblePluginManager.h  BiblePluginSettings.cpp  BiblePluginSettings.h  BibleResultHandler.cpp  BibleResultHandler.h  BibleSearch.cpp  BibleSearch.h  BibleSource.cpp  BibleSource.h  BibleVerseSource.cpp  BibleVerseSource.h  plugin-main.cpp
src/resources/: obs.qrc
src/ui/: BibleDock.cpp  BibleDock.h  BibleSettingsWidget.cpp  BibleSettingsWidget.h  BibleWidget.cpp  BibleWidget.h
tests/: CMakeLists.txt  fixture_bible.sql  test_bible_source.cpp  test_make_search_pattern.cpp
